ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-1
  labels:
     name: myapp-ingress
spec:
  rules:
  - host: abc.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: myapp-home
            port:
              number: 80
      - path: "/mobile"
        pathType: Prefix
        backend:
          service:
            name: myapp-mobile
            port:
              number: 80        
---
